# testing-harness

./: .gitignore  README.md  collect.py  docker-compose.yml  pyproject.toml  retrieval.py  setup.py
analysis/: retrieval.py
checkpoint/: best.pt  dtrBest.pkl  dtregBest.pkl
data/: statistics-3.csv  statistics-4.csv  statistics-5.csv  statistics-bbrmon-1.xlsx
docker/: Dockerfile  docker-compose.build.yml  docker-compose.yml
host tuning/: model.py
ini/: esnet-dtns.csv  hostlist-demo.csv  hostlist.csv  iperf3-8stream-test-sample.ini  iperf3-single.ini  iperf3-tuning-test-sample.ini  iperf3.ini  local-hosts.csv  perfsonar-single.ini  perfsonar-throughput-example.ini  perfsonar-throughput-example2.ini  perfsonar.ini  profile-test.ini  profiles.yml  single.ini  test-hosts.csv
lib/: __init__.py  ampq.py  gridftp.py  iperf3.py  job.py  model.py  mpstat.py  new.py  perfsonar.py  profile.py  sk_model.py  ss.py  tcpdump.py  tcptrace.py
parsing-scripts/: README.md  bost-dtn.ipynb  bostdtn-10G.py  bostdtn-40G.py  buffer-test.ipynb  buffer-test.py  testbed.ipynb  testbed.py
plot/: generate_gnuplot.sh  generate_gnuplot.simple.sh  generate_gnuplot_all.sh  iperf3_raw_to_gnuplot.py  iperf3_to_gnuplot.py  iperf3_to_gnuplot_all.sh  retreival-plot.py
utils/: bbr_build.sh  cleanup_pscheduler.py  disable_BIG.sh  enable_BIG.sh  fix-pscheduler-json.sh  format_pscheduler.py  format_pscheduler.sh  iperf3_cc_analysis.ipynb  ping-all.py  post-src-pacing.sh  pre-netem.sh  pre-pacing.sh  ps-docker-commit.sh  ps-docker.sh  result_parser.py  run_collect.sh  set-pacing.sh  set_defaults.sh  (+5 more)
(+10 files in other folders)
