[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testing-harness"
version = "0.1"
description = "ESnet Testing Harness"
authors = [{ name = "Ezra Kissel" }]
readme = "README.md"
requires-python = ">=3.8"

license = { text = "Apache-2.0" }

keywords = ["testing", "harness", "protocol", "iperf3", "perfsonar"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "requests",
    "pyyaml",
    "pika",
    "ping3",
    "tabulate",
]

[tool.setuptools.packages.find]
include = ["testing_harness*"]

